# deno-rust-wasm

./: .gitignore  Cargo.toml  README.md  demo.ts  justfile  mod.ts  template.json
scripts/: build.ts
src/: lib.rs
