[package]
name = "@moduleName@"
description = "Deno WebAssembly module by Rust"
version = "0.1.0"
authors = ["@author_name@ <@author_email@>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.70"
wee_alloc = { version = "0.4.5", optional = true }

[profile.release]
lto = true
opt-level = "z"

[features]
default = ["wee_alloc"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
